# speed-tests

./: LICENSE  README.md  curl-format.txt  test.py
benchmark/: Cargo.toml  README.md
benchmark/.cargo/: config
benchmark/src/: main.rs  run.bat  run.command  run.sh
