[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
curl = { version = "0.4.38", features = ["static-ssl", "static-curl"] }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.2.2"

[target.'cfg(unix)'.dependencies]
sysinfo = "0.19.2"
rustc-hash = "1.1.0"
